<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileSettingsItem"
        android:title="Profile Settings"/>
    <item
        android:id="@+id/allUsersItem"
        android:title="View All Users"/>
    <item
        android:id="@+id/shareLocationItem"
        android:title="Share Location"/>
    <item
        android:id="@+id/offlineModeItem"
        android:title="Offline Features"/>
    <item
        android:id="@+id/userLogoutItem"
        android:title="@string/logout_button"/>
</menu>